--- a/{{ cookiecutter.project_slug }}/package.json
+++ b/{{ cookiecutter.project_slug }}/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@{{ cookiecutter.namespace }}/{{ cookiecutter.project_slug }}",
     "version": "0.0.1",
+    "description": "{{ cookiecutter.project_short_description }}",
     "license": "{{ cookiecutter.license }}",
     "private": true,
     "scripts": {
