--- a/{{ cookiecutter.project_slug }}/nx.json
+++ b/{{ cookiecutter.project_slug }}/nx.json
@@ -3,20 +3,6 @@
     "affected": {
         "defaultBase": "master"
     },
-    "tasksRunnerOptions": {
-        "default": {
-            "runner": "nx/tasks-runners/default",
-            "options": {
-                "cacheableOperations": [
-                    "build",
-                    "lint",
-                    "test",
-                    "e2e",
-                    "build-storybook"
-                ]
-            }
-        }
-    },
     "pluginsConfig": {
         "@nx/js": {
             "analyzeSourceFiles": true
@@ -24,36 +10,55 @@
     },
     "targetDefaults": {
         "build": {
-            "dependsOn": ["^build"],
-            "inputs": ["production", "^production"]
+            "dependsOn": [
+                "^build"
+            ],
+            "inputs": [
+                "production",
+                "^production"
+            ],
+            "cache": true
         },
         "lint": {
             "inputs": [
                 "default",
                 "{workspaceRoot}/.eslintrc.json",
                 "{workspaceRoot}/.eslintignore"
-            ]
+            ],
+            "cache": true
         },
-        "test": {
+        "@nx/jest:jest": {
             "inputs": [
                 "default",
                 "^production",
                 "{workspaceRoot}/jest.preset.js"
-            ]
+            ],
+            "cache": true,
+            "options": {
+                "passWithNoTests": true
+            },
+            "configurations": {
+                "ci": {
+                    "ci": true,
+                    "codeCoverage": true
+                }
+            }
         },
         "build-storybook": {
+            "cache": true,
             "inputs": [
                 "default",
                 "^production",
-                "!{projectRoot}/.storybook/**/*"
+                "{projectRoot}/.storybook/**/*",
+                "{projectRoot}/tsconfig.storybook.json"
             ]
-        },
-        "e2e": {
-            "inputs": ["default", "^production"]
         }
     },
     "namedInputs": {
-        "default": ["{projectRoot}/**/*", "sharedGlobals"],
+        "default": [
+            "{projectRoot}/**/*",
+            "sharedGlobals"
+        ],
         "production": [
             "default",
             "!{projectRoot}/.eslintrc.json",
@@ -61,9 +66,13 @@
             "!{projectRoot}/tsconfig.spec.json",
             "!{projectRoot}/jest.config.[jt]s",
             "!{projectRoot}/**/*.stories.@(js|jsx|ts|tsx|mdx)",
-            "!{projectRoot}/.storybook/**/*"
+            "!{projectRoot}/.storybook/**/*",
+            "!{projectRoot}/tsconfig.storybook.json",
+            "!{projectRoot}/src/test-setup.[jt]s"
         ],
-        "sharedGlobals": ["{workspaceRoot}/babel.config.json"]
+        "sharedGlobals": [
+            "{workspaceRoot}/babel.config.json"
+        ]
     },
     "workspaceLayout": {
         "appsDir": "apps",
@@ -74,7 +83,6 @@
             "library": {
                 "style": "none",
                 "linter": "eslint",
-                "buildable": false,
                 "unitTestRunner": "jest",
                 "bundler": "rollup",
                 "component": false,
@@ -101,6 +109,15 @@
         "@nx/js": {
             "library": {
                 "buildable": true
+            }
+        }
+    },
+    "tasksRunnerOptions": {
+        "default": {
+            "options": {
+                "cacheableOperations": [
+                    "build-storybook"
+                ]
             }
         }
     }
