--- a/{{ cookiecutter.project_slug }}/package.json
+++ b/{{ cookiecutter.project_slug }}/package.json
@@ -7,83 +7,90 @@
     "scripts": {
     },
     "dependencies": {
-        "@reduxjs/toolkit": "^1.9.5",
-        "@swc/helpers": "~0.5.0",
+        "@reduxjs/toolkit": "^2.0.1",
+        "@swc/helpers": "~0.5.3",
+        "core-js": "^3.34.0",
         "lodash": "^4.17.21",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "react-intl": "^6.4.3",
-        "react-redux": "^8.0.7",
-        "react-router-dom": "6.12.1",
-        "redux": "^4.2.1",
-        "tslib": "^2.3.0"
+        "react-intl": "^6.5.5",
+        "react-redux": "^9.0.2",
+        "react-router-dom": "6.20.1",
+        "redux": "^5.0.0",
+        "tslib": "^2.6.2"
     },
     "packageManager": "pnpm@8.6.0",
     "devDependencies": {
-        "@babel/preset-react": "^7.14.5",
-        "@faker-js/faker": "^8.0.2",
-        "@nx/cypress": "16.3.2",
-        "@nx/devkit": "16.3.2",
-        "@nx/eslint-plugin": "16.3.2",
-        "@nx/jest": "16.3.2",
-        "@nx/js": "16.3.2",
-        "@nx/linter": "16.3.2",
-        "@nx/node": "16.3.2",
-        "@nx/plugin": "16.3.2",
-        "@nx/react": "16.3.2",
-        "@nx/rollup": "16.3.2",
-        "@nx/storybook": "16.3.2",
-        "@nx/web": "16.3.2",
-        "@nx/webpack": "16.3.2",
-        "@nx/workspace": "16.3.2",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-        "@rollup/plugin-url": "^7.0.0",
-        "@storybook/addon-actions": "^7.0.21",
-        "@storybook/addon-docs": "^7.0.21",
-        "@storybook/addon-essentials": "^7.0.9",
+        "@babel/preset-react": "^7.23.3",
+        "@faker-js/faker": "^8.3.1",
+        "@nx/cypress": "17.2.0",
+        "@nx/devkit": "17.2.0",
+        "@nx/eslint": "17.2.0",
+        "@nx/eslint-plugin": "17.2.0",
+        "@nx/jest": "17.2.0",
+        "@nx/js": "17.2.0",
+        "@nx/node": "17.2.0",
+        "@nx/plugin": "17.2.0",
+        "@nx/react": "17.2.0",
+        "@nx/rollup": "17.2.0",
+        "@nx/storybook": "17.2.0",
+        "@nx/web": "17.2.0",
+        "@nx/webpack": "17.2.0",
+        "@nx/workspace": "17.2.0",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+        "@rollup/plugin-terser": "^0.4.4",
+        "@rollup/plugin-url": "^8.0.2",
+        "@storybook/addon-actions": "7.6.4",
+        "@storybook/addon-docs": "7.6.4",
+        "@storybook/addon-essentials": "7.6.4",
+        "@storybook/addon-interactions": "^7.6.4",
         "@storybook/addon-knobs": "^7.0.2",
-        "@storybook/addon-links": "^7.0.21",
-        "@storybook/addon-storysource": "^7.0.21",
-        "@storybook/core-common": "^7.0.9",
-        "@storybook/core-server": "^7.0.9",
-        "@storybook/jest": "^0.1.0",
-        "@storybook/react-webpack5": "^7.0.9",
-        "@storybook/react": "^7.0.9",
-        "@storybook/test-runner": "^0.7.2",
-        "@svgr/rollup": "^8.0.1",
-        "@svgr/webpack": "^8.0.1",
-        "@swc/cli": "~0.1.62",
-        "@swc/core": "~1.3.51",
-        "@swc/jest": "0.2.20",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "14.0.0",
-        "@types/jest": "^29.4.0",
-        "@types/lodash": "^4.14.195",
-        "@types/node": "18.14.2",
-        "@types/react": "18.0.28",
-        "@types/react-dom": "18.0.11",
+        "@storybook/addon-links": "7.6.4",
+        "@storybook/addon-storysource": "7.6.4",
+        "@storybook/core-common": "^7.6.4",
+        "@storybook/core-server": "7.6.4",
+        "@storybook/jest": "0.2.3",
+        "@storybook/react": "7.6.4",
+        "@storybook/react-webpack5": "7.6.4",
+        "@storybook/test-runner": "^0.16.0",
+        "@storybook/testing-library": "^0.2.2",
+        "@svgr/rollup": "^8.1.0",
+        "@svgr/webpack": "^8.1.0",
+        "@swc-node/register": "~1.6.8",
+        "@swc/cli": "~0.1.63",
+        "@swc/core": "1.3.100",
+        "@swc/jest": "0.2.29",
+        "@testing-library/jest-dom": "^6.1.5",
+        "@testing-library/react": "14.1.2",
+        "@types/debug": "^4.1.12",
+        "@types/jest": "^29.5.11",
+        "@types/lodash": "^4.14.202",
+        "@types/node": "20.10.4",
+        "@types/react": "18.2.43",
+        "@types/react-dom": "18.2.17",
         "@types/react-router-dom": "5.3.3",
-        "@typescript-eslint/eslint-plugin": "^5.58.0",
-        "@typescript-eslint/parser": "^5.58.0",
-        "babel-jest": "^29.4.1",
-        "cypress": "^12.11.0",
-        "eslint": "~8.15.0",
-        "eslint-config-prettier": "8.1.0",
-        "eslint-plugin-cypress": "^2.10.3",
-        "eslint-plugin-import": "2.27.5",
-        "eslint-plugin-jsx-a11y": "6.7.1",
-        "eslint-plugin-react": "7.32.2",
+        "@typescript-eslint/eslint-plugin": "6.13.2",
+        "@typescript-eslint/parser": "6.13.2",
+        "babel-jest": "^29.7.0",
+        "cypress": "^13.6.1",
+        "eslint": "8.55.0",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-plugin-cypress": "2.15.1",
+        "eslint-plugin-import": "2.29.0",
+        "eslint-plugin-jsx-a11y": "6.8.0",
+        "eslint-plugin-react": "7.33.2",
         "eslint-plugin-react-hooks": "4.6.0",
-        "jest": "^29.4.1",
-        "jest-environment-jsdom": "^29.4.1",
-        "jest-environment-node": "^29.4.1",
-        "nx": "16.3.2",
-        "prettier": "^2.6.2",
-        "storybook-addon-module-mock": "^1.0.13",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-environment-node": "^29.7.0",
+        "nx": "17.2.0",
+        "prettier": "^3.1.0",
+        "storybook-addon-mock": "^4.3.0",
+        "storybook-addon-module-mock": "^1.1.2",
         "storybook-addon-playroom": "^4.0.0",
-        "ts-jest": "^29.1.0",
-        "ts-node": "10.9.1",
-        "typescript": "~5.0.2"
+        "ts-jest": "^29.1.1",
+        "ts-node": "10.9.2",
+        "typescript": "5.3.3"
     },
     "pnpm": {}
 }
